# ggconvolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ggconvolver.jucer
Resources/: CMakeLists.txt
Source/: Analyser.cpp  Analyser.h  CMakeLists.txt  EQComponent.cpp  EQComponent.h  IRComponent.cpp  IRComponent.h  LookAndFeelHelp.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  config.h.in
